<resources>
    <string name="app_name">FriendShake</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_button_change_pic">Change profile picture</string>
    <string name="profile_name_title">Username</string>
    <string name="profile_email_title">Email</string>
    <string name="profile_psw_title">Password</string>
    <string name="profile_phone_title">Phone</string>
    <string name="profile_position_title">Tittle</string>
    <string name="profile_psw_hint">*******</string>
    <string name="profile_phone_hint">6033333333</string>
    <string name="profile_email_hint">Email@dartmouth.edu</string>
    <string name="profile_name_hint">Username</string>
    <string name="profile_position_hint">The description of working position</string>
    <string name="title_activity_login">FriendShake</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_contact_list">ContactListActivity</string>

    <!--strings related to profile-->
    <string name="preference_private">shared_preference</string>
    <string name="preference_key_profile_name">profile_name</string>
    <string name="preference_key_profile_email">profile_email</string>
    <string name="preference_key_profile_psw">profile_password</string>
    <string name="preference_key_profile_phone">profile_phone</string>
    <string name="preference_key_profile_tittle">profile_tittle</string>
    <string name="profile_photo_file_name">profile_photo.png</string>
    <string name="ui_profile_toast_save_text">profile saved!</string>
    <string name="ui_toast_to_profile">Edit your own profile!</string>
    <string name="ui_profile_toast_accept_request">Accept friend\'s request</string>

</resources>
