<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="zhenma.myapplication.ProfileActivity">

    <include layout="@layout/content_profile" />
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imageProfile"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:layout_marginTop="50dp"
                android:src="@drawable/default_profile"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_button_change_pic"
                android:textColor="@color/colorPrimary"
                android:id="@+id/btnChangePhoto"
                android:textSize="15sp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:onClick="onChangePhotoClicked"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/profile_name_title" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editName"
                android:hint="@string/profile_name_hint"
                android:inputType="textPersonName"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/profile_email_title" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editEmail"
                android:password="false"
                android:hint="@string/profile_email_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/profile_psw_title" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editPsw"
                android:hint="@string/profile_psw_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/profile_phone_title" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editPhone"
                android:hint="@string/profile_phone_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="15dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/profile_position_title" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editZipcode"
                android:inputType="textCapWords"
                android:hint="@string/profile_position_hint" />

        </LinearLayout>

    </ScrollView>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>
